--- a/style2.css
+++ b/style2.css
@@ -7,14 +7,12 @@ body {
   justify-content: center;
   margin: auto;
 }
-
 body {
   background: #f3f4f4;
   font-family:"source Sans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .box{
   background: #fff;
   border-radius: .625rem;
@@ -28,6 +26,7 @@ body {
 .signin{
   color: #03a8f5;
   margin-top: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
 } 
 .logo, 
 .signin,
@@ -49,6 +48,11 @@ p{
 .signin{
   font: 600 1.8rem "source Sans";
   padding: .17em;
+  background-color: #03a8f5;
+  width: 97%;
+  text-align: center;
+  border-radius: 10px;
+  color: white;
 } 
 .signin-row{
   display: flex;
@@ -62,31 +66,38 @@ p{
   font-size: 2rem;
   transition: all .15s ease-out;
   -webkit-transition: all .15s ease-out;
+  bottom: 20px;
 } 
 .signin-text{
   color: #9da3a5;
   font-size: 10px;
-  
   margin-top: -10px;
   text-align: center;
+  font-family: "source Sans";
+  
 }
 .signin-tex{
   font-size: 20px;
   text-align: center;
   color: #9da3a5;
+  font-family: "source Sans";
+  margin-top: -20px;
+  
 }
+
 input{
   -webkit-appearance: none;
   -moz-appearance: none;
   background: none;
   border: 0;
   border-bottom: 2px solid #9da3a5;
-  font: 500 .9rem "source sans";
+  font: 500 .9rem 'Noto Sans JP', sans-serif;
   height: 2.15em;
   margin-top: .7em;
   transition: all .15s ease-out;
   -webkit-transition: all .15s ease-out;
   width: 80%;
+  top: 20px;
 }
 input:focus{
   border-bottom: 2px solid #03a8f5;
@@ -116,6 +127,7 @@ button{
   transition: all .15s ease-out;
   -webkit-transition: all .15s ease-out;
   width: 80%;
+  top:10px;
 }   
 button:hover{
   background: #444;
@@ -137,7 +149,6 @@ button:focus{
 .bold{
   font-weight: 600;
 }
-
 @media (max-width: 480px) {
     .box{
       display: flex;
