--- a/style2.css
+++ b/style2.css
@@ -23,11 +23,7 @@ body {
   position: absolute;
   width: 18.75rem;
 }  
-.signin{
-  color: #03a8f5;
-  margin-top: 20px;
-  font-family: 'Source Sans Pro', sans-serif;
-} 
+ 
 .logo, 
 .signin,
 input,  
@@ -51,7 +47,6 @@ p{
   background-color: #03a8f5;
   width: 97%;
   text-align: center;
-  border-radius: 10px;
   color: white;
 } 
 .signin-row{
@@ -73,8 +68,7 @@ p{
   font-size: 10px;
   margin-top: -10px;
   text-align: center;
-  font-family: "source Sans";
-  
+  font-family: "source Sans"; 
 }
 .signin-tex{
   font-size: 20px;
@@ -149,11 +143,37 @@ button:focus{
 .bold{
   font-weight: 600;
 }
-@media (max-width: 480px) {
+@media (max-width: 600px) {
     .box{
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
+      flex-wrap: wrap; 
+    }
+    .signin{
+    font: 600 1.8rem "source Sans";
+    padding: .14em;
+    background-color: #03a8f5;
+    top: -68px;
+    width: 97.5%;
+    text-align: center;
+    color: white;
+    }
+    .signin-row > .logo{
+      top: -60px;
+    }
+    .signin-text{
+      color: #9da3a5;
+      font-size: 10px;
+      
+      text-align: center;
+      font-family: "source Sans"; 
+    }
+    .signin-tex{
+      font-size: 20px;
+      text-align: center;
+      color: #9da3a5;
+      font-family: "source Sans";
+      margin-top: -50px;
       
     }
   }
